--- a/src/sass/Layout/_video.scss
+++ b/src/sass/Layout/_video.scss
@@ -2,10 +2,18 @@
 @use '../base/mixins' as m;
 
 .video{
-    position: relative;
-    max-height: 100rem;
-    min-height: 25rem;
-    margin: 0;
+        position: relative;
+        @include m.desktop{
+            max-height: 120rem;
+            min-height: 70rem;
+        }
+        @include m.telefono{
+            max-height: 120rem;
+            min-height: 25rem;
+        }
+
+        margin: 0;
+
     .overlay{
         position: absolute;
         display: flex;
@@ -15,45 +23,59 @@
         background: radial-gradient(circle, rgba(183, 234, 232, 0.185) 0%, rgba(173,193,232,0.18149906446953779) 48%, rgba(163,148,233,0.7249164314163166) 100%);
         height: 100%;
         width: 100%;
+        @include m.telefono{
+            height: 100%;
+            width: 100%;
+        }
     }
     video{
         width: auto;
         display: block;
+
         @include m.telefono{
-            width: 250%;
+            width: 150%;
         }
         @include m.desktop{
             width: 100%;
         }
+
+
+
     }
 }
 
 .contenido-video{
+
     z-index: 10;
     h2{
         color: v.$gris;
-        font-size: 7rem;
         @include m.telefono{
-            font-size: 3.5rem;
+            margin: 0 0 ;
+            font-size: 1.5rem;
+        }
+        @include m.desktop{
+            font-size: 6rem;
         }
     }
     p{
         @include m.telefono{
-            width: 100%;
+            width: 65%;
             padding: 1rem;
-            font-size: 1.5rem;
+            font-size: 1rem;
             font-weight: 700;
+
         }
         @include m.desktop{
-            width: 25%;
+            width: 40%;
+            font-size: 1.5rem;
+            font-weight: 700;
+            font-size: 2.3rem;
         }
+
 
         background-color: v.$morado;
         color: v.$negro;
-        padding: 1rem 2rem;
-        font-weight: 700;
-        font-size: 2.5rem;
-        margin: 0;
+
 
     }
 }
