--- a/src/sass/base/_globales.scss
+++ b/src/sass/base/_globales.scss
@@ -33,7 +33,7 @@ a{
     text-decoration: none;
 }
 h1,h2,h3{
-    margin: 0 0 5rem 0 ;
+    margin: 0 0 3rem 0 ;
 }
 
 h1{
@@ -44,4 +44,11 @@ h2{
 }
 h3{
     font-size: 3rem;
+}
+
+img{
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+    //display: block;
 }
