pequnha mejoras de responsive

--- a/src/sass/Layout/_galeria.scss
+++ b/src/sass/Layout/_galeria.scss
@@ -3,24 +3,25 @@
 
 
 .galeria{
+    padding: 5em 0 ; 
     h3{
         margin-top: 2rem;
         font-size: 5rem;
         text-align: center;
         font-weight: 700;
     }
-    padding-bottom: 3rem;
+
     ul{
         @include m.telefono{
             @include m.grid(1,3fr,2rem)
         }
     
         @include m.table{
-            @include m.grid(2,1fr,4rem)
+            @include m.grid(3,1fr,4rem)
         }
     
         @include m.desktop{
-            @include m.grid(4,1fr,4rem)
+            @include m.grid(5,1fr,4rem)
         }
     }
 
