--- a/src/sass/Layout/_dia.scss
+++ b/src/sass/Layout/_dia.scss
@@ -20,15 +20,18 @@
 }
 
 .seminario-contenedor{
-
+ 
     @include m.telefono{
+        width: 70%;
         @include m.grid(1,4fr,5rem);
-        margin: 0 4rem;
+        margin: 0 auto;
     }
 
     @include m.table{
+        width: 70%;
         @include m.grid(2,1fr,5rem);
         margin: 0 auto;
+
     }
     @include m.desktop{
         @include m.grid(2,1fr,5rem);
