--- a/src/sass/base/_globales.scss
+++ b/src/sass/base/_globales.scss
@@ -14,6 +14,10 @@ html{
 body{
     font-family: v.$fuente_pri;
     font-size: 1.6rem;
+
+    &.fijar-imge{ //cunado aparesca esta clase anhadele este estilo
+        overflow: hidden;
+    }
 }
 
 p{
