cambio de posicion de unos archivos

--- a/src/sass/Layout/_dia.scss
+++ b/src/sass/Layout/_dia.scss
@@ -54,6 +54,11 @@
 }
 
 .seminario{
+
+    p{
+        padding: 0 2rem;
+        font-weight: 600;
+    }
     
     margin-top: 3rem;
     max-width: 35rem;
