se comprime y otras herraminetas de css y ultimo estilos dado

--- a/src/sass/base/_globales.scss
+++ b/src/sass/base/_globales.scss
@@ -17,6 +17,10 @@ body{
 
     &.fijar-imge{ //cunado aparesca esta clase anhadele este estilo
         overflow: hidden;
+
+    }
+    &.body-scroll{
+        padding-top: 5.606rem;
     }
 }
 
