--- a/src/sass/Layout/_header.scss
+++ b/src/sass/Layout/_header.scss
@@ -3,6 +3,17 @@
 
 
 .header{
+    @include m.table{
+        &.fijo{ //si aparece esta clase aplica estos estilos
+            left: 0;
+            top: 0;
+            
+            position: fixed;
+            width: 100%;
+            box-shadow: .3rem .3rem .3rem v.$gris ;
+        }
+    }
+
     background-color: v.$rosado;
 
 
